# C

./: LICENSE  README.md  doodle.ipynb
Classes/: Stacinema.cpp
CmakeTutorial/EP#1/: CMakeLists.txt  main.cpp
CmakeTutorial/EP#2/: CMakeLists.txt  main.cpp
Operator_overloading/: OperatorOverloading.cpp
Pointer/: Dynamic_Array.cpp  Practice.cpp  R  Refrence.cpp  rearrangement.cpp
ProxyModelThing/: CMakeLists.txt  MyTableView.qml  main.cpp
Recursive/: justehsan.cpp  merge.cpp  power.cpp
Templates/: Final.cpp
build-ProxyModelThing-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appproxymodelthing_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-ProxyModelThing-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-ProxyModelThing-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appProxyModelThing.cmake  Qt6_QmlPlugins_Imports_appProxyModelThing.rsp
build-ProxyModelThing-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-frtask-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appfrtask_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-frtask-Desktop_Qt_6_5_1_GCC_64bit-Debug/.rcc/: qml.qrc  (+5 more)
cppAlone/: OOP.cpp  newfor.cpp
cppcherno/: calc  notebook.c  notebook.cpp  out
frtask/: CMakeLists.txt  LocationManager.cpp  LocationManager.h  LocationManager.qml  LocationManagerProxyModel.cpp  LocationManagerProxyModel.h  main.cpp  qml.qrc
inheritance_and_polymorphism/: messenger.cpp
(+461 files in other folders)
